--- a/app/views/entries/_entries_trends.html.erb
+++ b/app/views/entries/_entries_trends.html.erb
@@ -1,30 +1,30 @@
 <% if @is_user_page.to_s == "true" %>
 
-  <div class="span3 borderleft utilization">
-    <fieldset>
-      <legend>Utilization</legend>
-      <div class="row statusbar">
-        <div class="spanhalf"><p>Week</p></div>
-        <div class="span2 progress progress-striped progress-warning tips" 
-              title="<%= @my_week_sum %>/<%= @workhours_week %>"><div class="bar" 
-              style="width: <%= @utilization_week %>;"><p><%= @utilization_week %></p></div></div>
-      </div>
-      <div class="row statusbar">
-        <div class="spanhalf"><p>Month</p></div>
-        <div class="span2 progress progress-striped progress-warning tips" 
-              title="<%= @my_month_sum %>/<%= @workhours_month %>"><div class="bar" 
-              style="width: <%= @utilization_month %>;"><p><%= @utilization_month %></p></div></div>
-      </div>
-      <div class="row statusbar">
-        <div class="spanhalf"><p>Year</p></div>
-        <div class="span2 progress progress-striped progress-warning tips" 
-              title="<%= @my_year_sum %>/<%= @workhours_year %>"><div class="bar" 
-              style="width: <%= @utilization_year %>;"><p><%= @utilization_year %></p></div></div>
-      </div>
-    </fieldset>
-  </div>
-
-
+  <!-- <div class="span3 borderleft utilization">
+     <fieldset>
+       <legend>Utilization</legend>
+       <div class="row statusbar">
+         <div class="spanhalf"><p>Week</p></div>
+         <div class="span2 progress progress-striped progress-warning tips" 
+               title="<%= @my_week_sum %>/<%= @workhours_week %>"><div class="bar" 
+               style="width: <%= @utilization_week %>;"><p><%= @utilization_week %></p></div></div>
+       </div>
+       <div class="row statusbar">
+         <div class="spanhalf"><p>Month</p></div>
+         <div class="span2 progress progress-striped progress-warning tips" 
+               title="<%= @my_month_sum %>/<%= @workhours_month %>"><div class="bar" 
+               style="width: <%= @utilization_month %>;"><p><%= @utilization_month %></p></div></div>
+       </div>
+       <div class="row statusbar">
+         <div class="spanhalf"><p>Year</p></div>
+         <div class="span2 progress progress-striped progress-warning tips" 
+               title="<%= @my_year_sum %>/<%= @workhours_year %>"><div class="bar" 
+               style="width: <%= @utilization_year %>;"><p><%= @utilization_year %></p></div></div>
+       </div>
+     </fieldset>
+   </div>
+  -->
+ 
 	<div id="hours_by_project_chart" class="span 7"></div>
 	<script type="text/javascript">
 
