--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,17 @@
 	
       			<% if signed_in? %> <!-- USER IS SIGNED IN -->
 	        
+	        
+	          <li class="dropdown">
+      		    <a href="#Settings" class="dropdown-toggle" data-toggle="dropdown">My Projects<b class="caret"></b></a>
+        		  <ul class="dropdown-menu">
+          			<% my_projects.each do |p| %>
+                	<li><%=link_to p do %><i class="icon-share-alt"></i> <%= p.name %> <% end %></li>
+                <% end %>	        			
+      	      </ul>
+      		  </li> <!-- dropdown -->
+	        
+	        
             <li class="dropdown">
       		    <a href="#Settings" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.name %> <b class="caret"></b></a>
         		  <ul class="dropdown-menu">
