--- a/app/views/relationships/_form.html.erb
+++ b/app/views/relationships/_form.html.erb
@@ -14,11 +14,11 @@
 		<%= f.hidden_field :user_id, :value => @user.id %>
 		<%= f.association :project, :collection => @notstaffed_projects, :selected => @notstaffed_projects.first  %>
 	<% end %>
-	<%= f.input :rate %>
+	<%= f.input :rate, :label => "Rate ($/hr)" %>
 	<!-- <%= f.input :staffing_start, :as => :string,
 	 			:input_html => { :id => "StaffingStartDate" } %>
 	<%= f.input :staffing_end, :as => :string,
 				 			:input_html => { :id => "StaffingEndDate" } %> -->
 	<%= f.input :budgeted_hrs, :label => 'Budgeted Hours' %>
-  	<%= f.submit "Add to Staff", :class => 'btn btn-large btn-primary' %>
+  	<%= f.submit "Add to Staff", :class => 'btn' %>
 <% end %>
